remove leftover jdk.incubator files and fix some test config